--- a/RouteMe1/Base.lproj/Main_iPhone.storyboard
+++ b/RouteMe1/Base.lproj/Main_iPhone.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rS3-R9-Ivy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="rS3-R9-Ivy">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -131,11 +131,49 @@
                     <navigationItem key="navigationItem" title="Input" id="zV9-ob-eX3"/>
                     <connections>
                         <outlet property="addBtn" destination="eQL-qs-pFJ" id="kZX-G4-Jmv"/>
+                        <segue destination="yNr-3H-cmP" kind="push" identifier="select_activities_segue" id="cps-AS-Yhz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f1g-Dt-RVx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="908" y="64"/>
+        </scene>
+        <!--Activities View Controller - Activity Suggestions-->
+        <scene sceneID="CaJ-sN-hDY">
+            <objects>
+                <tableViewController id="yNr-3H-cmP" customClass="ActivitiesViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Hr4-09-Omd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="3gA-D5-Z4j">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="qcH-G6-YJz">
+                                <rect key="frame" x="0.0" y="130" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qcH-G6-YJz" id="gCM-Qh-qPp">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="yNr-3H-cmP" id="1dJ-M0-uUg"/>
+                            <outlet property="delegate" destination="yNr-3H-cmP" id="cRM-Yc-7GS"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Activity Suggestions" id="IYe-2f-JyR"/>
+                    <connections>
+                        <outlet property="searchBar" destination="3gA-D5-Z4j" id="cKo-NG-hOf"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w2I-eW-7lP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1401" y="64"/>
         </scene>
         <!--Destinations Table View Controller-->
         <scene sceneID="R2n-C8-eMs">
@@ -145,9 +183,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="352"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="E7U-Ih-XgJ">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="oxr-U0-vwG" id="XZi-E2-tjK"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="a5T-4Z-B8u">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="a5T-4Z-B8u" customClass="EditDestinationsCell">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a5T-4Z-B8u" id="rRD-ml-BVI">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -160,8 +206,21 @@
                             <outlet property="delegate" destination="oxr-U0-vwG" id="99O-fg-IuN"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="searchBar" destination="E7U-Ih-XgJ" id="TeO-gM-A0t"/>
+                        <outlet property="searchDisplayController" destination="cPv-af-a1k" id="f5b-n7-W5t"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HIo-ak-9ZR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="cPv-af-a1k">
+                    <connections>
+                        <outlet property="delegate" destination="oxr-U0-vwG" id="CIv-7O-Oqf"/>
+                        <outlet property="searchBar" destination="E7U-Ih-XgJ" id="yTG-4H-dx9"/>
+                        <outlet property="searchContentsController" destination="oxr-U0-vwG" id="oJI-0T-sZZ"/>
+                        <outlet property="searchResultsDataSource" destination="oxr-U0-vwG" id="oo1-gm-G5f"/>
+                        <outlet property="searchResultsDelegate" destination="oxr-U0-vwG" id="9s1-eg-hah"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="908" y="728"/>
         </scene>
